--- a/style.css
+++ b/style.css
@@ -57,4 +57,10 @@ button{
     font-family: 'Righteous', cursive;
     color: #fff;
     font-size: 1.5rem;
+    cursor: pointer;
+    transition: background-color .2s;
+}
+
+button:hover{
+    background-color: #c23957;
 }
